# alphagozero-rs

./: Cargo.toml  README.md
game/: Cargo.toml
game/src/: igo.rs  jspredict.js  lib.rs  lib2.rs  main.rs  test.rs
game/src/igo/: board.rs  mcts.rs  stones.rs
game/tests/: board.rs  stones.rs
src/: igo.rs  lib.rs  main.rs
src/igo/: board.rs  mcts.rs  nnet.rs  stones.rs
tests/: board.rs  stones.rs
train/: .gitignore  Cargo.toml  az_game.d  az_game.dll.exp  az_game.dll.lib  build.rs  dualnet.onnx  export_tfjs.ipynb  test.ipynb
train/5x5/: best.pt  dualnet.pt  model.json
train/7x7/: best.pt  dualnet7x7.pt  lv2.pt
train/benches/: my_benchmark.rs
train/src/: coach.rs  dualnet.pt  dualnet.py  dualnet5x5.py  dualnet7x7.pt  dualnet7x7.py  dualnet7x7_8conv.pt  dualnet7x7_8conv.py  dualnet7x7_bn.py  dualnet7x7_se.pt  dualnet7x7_se.py  dualnet_v2.py  dualnet_v3.py  foo.rs  lib.rs  main.rs  nnet.rs
train/temp/: best.pt
