[package]
name = "az_game"
version = "0.1.0"
authors = ["s-en <sen@nemusoft.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
auto_ops = "0.3.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
serde_json = "1.0"
wasm-bindgen-futures = "0.4.24"
console_error_panic_hook = "0.1.6"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
futures = "0.3"
wasm-rs-async-executor = "0.9.0"

[lib]
crate-type = ["cdylib", "rlib"]