[package]
name = "az_train"
version = "0.1.0"
authors = ["s-en <sen@nemusoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
tch = "0.4.1"
torch-sys = "0.4.1"
anyhow = "1.0"
indicatif = "0.16.0"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
savefile="0.7"
savefile-derive="0.7"
az_game = { path = "../game" }
futures = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
